Mon Jun 24 20:31:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* compile.c (make_name_for_block): use PRIsVALUE in format string
	  instead of %s and RSTRING_PTR to protect objects from being garbage
	  collected too soon
	* encoding.c (str_to_encindex): ditto
	* hash.c (rb_hash_fetch_m): ditto
	* io.c (rb_io_reopen): ditto
	* parse.y (reg_fragment_check_gen): ditto
	* parse.y (reg_compile_gen): ditto
	* parse.y (ripper_assert_Qundef): ditto
	* re.c (rb_reg_raise): ditto
	* ruby.c (set_option_encoding_once): ditto
	* vm_eval.c (rb_throw_obj): ditto

Mon Jun 24 07:57:18 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (after_gc_sweep): Have to record malloc info before reset.
	* gc.c (gc_prof_timer_start): Pick out part of new record creation as gc_prof_setup_new_record.
	* gc.c (gc_prof_set_malloc_info): Move point of recording allocation size to front of mark.

Mon Jun 24 02:53:09 2013  Zachary Scott  <zachary@zacharyscott.net>

	* array.c: Return value in Array overview example found by @PragTob
	  [Fix GH-336] https://github.com/ruby/ruby/pull/336

Mon Jun 24 02:45:51 2013  Zachary Scott  <zachary@zacharyscott.net>

	* array.c (rb_ary_zip): typo by @PragTob [Fix GH-337]
	  https://github.com/ruby/ruby/pull/337

Mon Jun 24 02:42:01 2013  Zachary Scott  <zachary@zacharyscott.net>

	* win32/README.win32: grammar typo by @blankenshipz [Fix GH-334]
	  https://github.com/ruby/ruby/pull/334

Mon Jun 24 00:59:35 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (BIGUP): Use LSHIFTX and avoid cast to consider the type
	  of x is bigger than BDIGIT_DBL.
	  (big2ulong): Use unsigned long to store the result.
	  (big2ull): Use unsigned LONG_LONG to store the result.
	  (bigand_int): Use long for num to avoid data loss.
	  (bigor_int): Ditto.
	  (bigxor_int): Ditto.

Sun Jun 23 23:05:58 2013  Tanaka Akira  <akr@fsij.org>

	* include/ruby/defines.h (BDIGIT): Define it only if it is not defined
	  yet.  This eases tests and debug.
	  (SIZEOF_BDIGITS): Ditto.